# conan-tutorial

./: .gitignore  README.md
app/: CMakeLists.txt  appmain.cpp  conanfile.txt
lib1/: CMakeLists.txt  conanfile.txt  lib1.cpp  lib1.h  lib1main.cpp
lib2/: CMakeLists.txt  lib2.cpp  lib2.h  lib2main.cpp
pkg/lib1/: conanfile.py
pkg/lib1/test_package/: conanfile.py  example.cpp
pkg/lib2/: conanfile.py
pkg/lib2/test_package/: conanfile.py  example.cpp
